--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <biscuit-java.version>1.1.2</biscuit-java.version>
     <logback-classic.version>1.2.3</logback-classic.version>
     <protobuf.version>3.13.0</protobuf.version>
-    <pulsar.version>2.8.0-SNAPSHOT</pulsar.version>
+    <pulsar.version>2.8.0</pulsar.version>
     <slf4j-api.version>1.7.29</slf4j-api.version>
     <vavr.version>0.10.2</vavr.version>
 
