--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>biscuit-pulsar</artifactId>
   <packaging>jar</packaging>
   <name>biscuit-pulsar</name>
-  <version>2.3.1</version>
+  <version>2.4.0-SNAPSHOT</version>
   <url>https://github.com/clevercloud/biscuit-pulsar</url>
 
   <description>Biscuit authentication/authorization plugins for Apache Pulsar</description>
