--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.pulsar</groupId>
-      <artifactId>pulsar-broker-common</artifactId>
+      <artifactId>pulsar-common</artifactId>
       <version>${pulsar.version}</version>
       <exclusions>
         <exclusion>
