--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,14 @@
     <maven-source.version>2.2.1</maven-source.version>
     <maven-javadoc.version>2.9.1</maven-javadoc.version>
     <nexus-staging-maven.version>1.6.7</nexus-staging-maven.version>
+    <maven-compiler-plugin.version>3.10.0</maven-compiler-plugin.version>
 
     <!-- dependencies -->
     <biscuit-java.version>2.2.0</biscuit-java.version>
     <logback-classic.version>1.2.10</logback-classic.version>
-    <protobuf.version>3.16.1</protobuf.version>
-    <pulsar.version>2.10.0</pulsar.version>
+    <slf4j-reload4j.version>1.7.36</slf4j-reload4j.version>
+    <protobuf.version>3.16.3</protobuf.version>
+    <pulsar.version>2.10.2</pulsar.version>
     <vavr.version>0.10.3</vavr.version>
 
     <!-- test dependencies -->
@@ -112,6 +114,17 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <compilerArgs>
+            <arg>-verbose</arg>
+            <arg>-Xlint:all,-options,-path</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
         <version>${nexus-staging-maven.version}</version>
@@ -173,14 +186,18 @@
     </dependency>
     <dependency>
       <groupId>org.apache.pulsar</groupId>
-      <artifactId>pulsar-broker</artifactId>
+      <artifactId>pulsar-client</artifactId>
       <version>${pulsar.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.pulsar</groupId>
-          <artifactId>pulsar-functions-runtime</artifactId>
-        </exclusion>
-      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pulsar</groupId>
+      <artifactId>pulsar-common</artifactId>
+      <version>${pulsar.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pulsar</groupId>
+      <artifactId>pulsar-broker-common</artifactId>
+      <version>${pulsar.version}</version>
     </dependency>
 
     <dependency>
