--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <maven-compiler-plugin.version>3.10.0</maven-compiler-plugin.version>
 
     <!-- dependencies -->
-    <biscuit-java.version>2.2.0</biscuit-java.version>
+    <biscuit-java.version>2.3.1</biscuit-java.version>
     <logback-classic.version>1.2.10</logback-classic.version>
     <slf4j-reload4j.version>1.7.36</slf4j-reload4j.version>
     <protobuf.version>3.16.3</protobuf.version>
@@ -174,8 +174,8 @@
       <version>${protobuf.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.clever-cloud</groupId>
-      <artifactId>biscuit-java</artifactId>
+      <groupId>org.biscuitsec</groupId>
+      <artifactId>biscuit</artifactId>
       <version>${biscuit-java.version}</version>
       <type>jar</type>
     </dependency>
