--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <!-- test dependencies -->
     <assertj-core.version>3.14.0</assertj-core.version>
     <junit.version>4.13.1</junit.version>
+    <mockito.version>5.6.0</mockito.version>
   </properties>
 
   <licenses>
@@ -217,6 +218,13 @@
       <artifactId>assertj-core</artifactId>
       <version>${assertj-core.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
     </dependency>
   </dependencies>
 </project>
