--- a/.github/workflows/deploy_to_central.yml
+++ b/.github/workflows/deploy_to_central.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Set up Maven Central Repository
         uses: actions/setup-java@v2
         with:
-          java-version: "17"
-          distribution: "adopt"
+          java-version: "21"
+          distribution: "temurin"
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
