--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -19,10 +19,10 @@ jobs:
           version: "3.x"
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v2
         with:
-          java-version: "17"
-          distribution: "adopt"
+          java-version: "21"
+          distribution: "temurin"
       - name: Build with Maven
         run: mvn -B package --file pom.xml
