--- a/.github/workflows/deploy_to_central.yml
+++ b/.github/workflows/deploy_to_central.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Install gpg secret key
         run: |
-          cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
+          cat <(echo -e "${{ secrets.CENTRAL_GPG_SECRET_KEY }}") | gpg --batch --import
       - name: Install Protoc
         uses: arduino/setup-protoc@v1
         with:
@@ -20,11 +20,11 @@ jobs:
         with:
           java-version: "21"
           distribution: "temurin"
-          server-id: ossrh
+          server-id: central
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Publish package
-        run: mvn --batch-mode -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} deploy -Pdeploy
+        run: mvn --batch-mode -Dgpg.passphrase=${{ secrets.CENTRAL_GPG_SECRET_KEY_PASSWORD }} deploy -Pdeploy
         env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+          MAVEN_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.CENTRAL_TOKEN }}
